--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Executive Summary - Delta Strategy</title>
+  <title>Executive Summary – Delta Strategy</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
       margin: 0;
-      font-family: sans-serif;
+      font-family: Arial, sans-serif;
       background-color: #f9f9f9;
     }
     header {
@@ -17,8 +18,26 @@
     }
     iframe {
       width: 100%;
-      height: 90vh;
+      height: 85vh;
       border: none;
+      display: block;
+    }
+    .download-container {
+      text-align: center;
+      padding: 1em;
+    }
+    .download-button {
+      background-color: #003366;
+      color: white;
+      font-size: 1.2em;
+      padding: 12px 24px;
+      border-radius: 5px;
+      text-decoration: none;
+      display: inline-block;
+      transition: background-color 0.3s;
+    }
+    .download-button:hover {
+      background-color: #0055aa;
     }
   </style>
 </head>
@@ -26,6 +45,15 @@
   <header>
     <h1>Executive Summary – Delta Strategy</h1>
   </header>
+
+  <!-- Embedded PDF viewer -->
   <iframe src="Executive%20Summary%20-%20Delta%20Strategy.pdf"></iframe>
+
+  <!-- Download fallback for mobile -->
+  <div class="download-container">
+    <a class="download-button" href="Executive%20Summary%20-%20Delta%20Strategy.pdf" download target="_blank">
+      📄 Download the Full PDF
+    </a>
+  </div>
 </body>
 </html>
